--- a/templates/dnld.html
+++ b/templates/dnld.html
@@ -6,8 +6,8 @@
     <title>Download Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
-  
-    <style>
+
+  <style>
     h2{
       top: 10px;
       text-align: center;
@@ -26,13 +26,16 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
   </style>
-  
+
+
+
   <body>
-    <h2>Caution!</h2>
+    <h1>Hello, User!</h1>
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Filesize &colon; {{Filesize}} KB</h4>
         <p>Downloaded file is save in D drive. Directory is D:/</p>
         <p>Download button will work on windows operating system and only if you have D drive in your Drive partition</p>
+
       </div>
 
       <div class="alert alert-warning" role="alert">
